; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_ARB_vertex_type_2_10_10_10_rev.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_ARB_vertex_type_2_10_10_10_rev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_ARB_vertex_type_2_10_10_10_rev = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"glVertexAttribP1ui\00", align 1
@glad_glVertexAttribP1ui = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [20 x i8] c"glVertexAttribP1uiv\00", align 1
@glad_glVertexAttribP1uiv = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [19 x i8] c"glVertexAttribP2ui\00", align 1
@glad_glVertexAttribP2ui = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [20 x i8] c"glVertexAttribP2uiv\00", align 1
@glad_glVertexAttribP2uiv = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [19 x i8] c"glVertexAttribP3ui\00", align 1
@glad_glVertexAttribP3ui = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [20 x i8] c"glVertexAttribP3uiv\00", align 1
@glad_glVertexAttribP3uiv = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [19 x i8] c"glVertexAttribP4ui\00", align 1
@glad_glVertexAttribP4ui = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [20 x i8] c"glVertexAttribP4uiv\00", align 1
@glad_glVertexAttribP4uiv = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [13 x i8] c"glVertexP2ui\00", align 1
@glad_glVertexP2ui = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [14 x i8] c"glVertexP2uiv\00", align 1
@glad_glVertexP2uiv = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [13 x i8] c"glVertexP3ui\00", align 1
@glad_glVertexP3ui = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [14 x i8] c"glVertexP3uiv\00", align 1
@glad_glVertexP3uiv = common dso_local global i64 0, align 8
@.str.12 = private unnamed_addr constant [13 x i8] c"glVertexP4ui\00", align 1
@glad_glVertexP4ui = common dso_local global i64 0, align 8
@.str.13 = private unnamed_addr constant [14 x i8] c"glVertexP4uiv\00", align 1
@glad_glVertexP4uiv = common dso_local global i64 0, align 8
@.str.14 = private unnamed_addr constant [15 x i8] c"glTexCoordP1ui\00", align 1
@glad_glTexCoordP1ui = common dso_local global i64 0, align 8
@.str.15 = private unnamed_addr constant [16 x i8] c"glTexCoordP1uiv\00", align 1
@glad_glTexCoordP1uiv = common dso_local global i64 0, align 8
@.str.16 = private unnamed_addr constant [15 x i8] c"glTexCoordP2ui\00", align 1
@glad_glTexCoordP2ui = common dso_local global i64 0, align 8
@.str.17 = private unnamed_addr constant [16 x i8] c"glTexCoordP2uiv\00", align 1
@glad_glTexCoordP2uiv = common dso_local global i64 0, align 8
@.str.18 = private unnamed_addr constant [15 x i8] c"glTexCoordP3ui\00", align 1
@glad_glTexCoordP3ui = common dso_local global i64 0, align 8
@.str.19 = private unnamed_addr constant [16 x i8] c"glTexCoordP3uiv\00", align 1
@glad_glTexCoordP3uiv = common dso_local global i64 0, align 8
@.str.20 = private unnamed_addr constant [15 x i8] c"glTexCoordP4ui\00", align 1
@glad_glTexCoordP4ui = common dso_local global i64 0, align 8
@.str.21 = private unnamed_addr constant [16 x i8] c"glTexCoordP4uiv\00", align 1
@glad_glTexCoordP4uiv = common dso_local global i64 0, align 8
@.str.22 = private unnamed_addr constant [20 x i8] c"glMultiTexCoordP1ui\00", align 1
@glad_glMultiTexCoordP1ui = common dso_local global i64 0, align 8
@.str.23 = private unnamed_addr constant [21 x i8] c"glMultiTexCoordP1uiv\00", align 1
@glad_glMultiTexCoordP1uiv = common dso_local global i64 0, align 8
@.str.24 = private unnamed_addr constant [20 x i8] c"glMultiTexCoordP2ui\00", align 1
@glad_glMultiTexCoordP2ui = common dso_local global i64 0, align 8
@.str.25 = private unnamed_addr constant [21 x i8] c"glMultiTexCoordP2uiv\00", align 1
@glad_glMultiTexCoordP2uiv = common dso_local global i64 0, align 8
@.str.26 = private unnamed_addr constant [20 x i8] c"glMultiTexCoordP3ui\00", align 1
@glad_glMultiTexCoordP3ui = common dso_local global i64 0, align 8
@.str.27 = private unnamed_addr constant [21 x i8] c"glMultiTexCoordP3uiv\00", align 1
@glad_glMultiTexCoordP3uiv = common dso_local global i64 0, align 8
@.str.28 = private unnamed_addr constant [20 x i8] c"glMultiTexCoordP4ui\00", align 1
@glad_glMultiTexCoordP4ui = common dso_local global i64 0, align 8
@.str.29 = private unnamed_addr constant [21 x i8] c"glMultiTexCoordP4uiv\00", align 1
@glad_glMultiTexCoordP4uiv = common dso_local global i64 0, align 8
@.str.30 = private unnamed_addr constant [13 x i8] c"glNormalP3ui\00", align 1
@glad_glNormalP3ui = common dso_local global i64 0, align 8
@.str.31 = private unnamed_addr constant [14 x i8] c"glNormalP3uiv\00", align 1
@glad_glNormalP3uiv = common dso_local global i64 0, align 8
@.str.32 = private unnamed_addr constant [12 x i8] c"glColorP3ui\00", align 1
@glad_glColorP3ui = common dso_local global i64 0, align 8
@.str.33 = private unnamed_addr constant [13 x i8] c"glColorP3uiv\00", align 1
@glad_glColorP3uiv = common dso_local global i64 0, align 8
@.str.34 = private unnamed_addr constant [12 x i8] c"glColorP4ui\00", align 1
@glad_glColorP4ui = common dso_local global i64 0, align 8
@.str.35 = private unnamed_addr constant [13 x i8] c"glColorP4uiv\00", align 1
@glad_glColorP4uiv = common dso_local global i64 0, align 8
@.str.36 = private unnamed_addr constant [21 x i8] c"glSecondaryColorP3ui\00", align 1
@glad_glSecondaryColorP3ui = common dso_local global i64 0, align 8
@.str.37 = private unnamed_addr constant [22 x i8] c"glSecondaryColorP3uiv\00", align 1
@glad_glSecondaryColorP3uiv = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_ARB_vertex_type_2_10_10_10_rev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_ARB_vertex_type_2_10_10_10_rev(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_ARB_vertex_type_2_10_10_10_rev, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %83

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glVertexAttribP1ui, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glVertexAttribP1uiv, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glVertexAttribP2ui, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glVertexAttribP2uiv, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glVertexAttribP3ui, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glVertexAttribP3uiv, align 8
  %19 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %20 = call i64 %19(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.6, i64 0, i64 0))
  store i64 %20, i64* @glad_glVertexAttribP4ui, align 8
  %21 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %22 = call i64 %21(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i64 0, i64 0))
  store i64 %22, i64* @glad_glVertexAttribP4uiv, align 8
  %23 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %24 = call i64 %23(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.8, i64 0, i64 0))
  store i64 %24, i64* @glad_glVertexP2ui, align 8
  %25 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %26 = call i64 %25(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.9, i64 0, i64 0))
  store i64 %26, i64* @glad_glVertexP2uiv, align 8
  %27 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %28 = call i64 %27(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.10, i64 0, i64 0))
  store i64 %28, i64* @glad_glVertexP3ui, align 8
  %29 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %30 = call i64 %29(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.11, i64 0, i64 0))
  store i64 %30, i64* @glad_glVertexP3uiv, align 8
  %31 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %32 = call i64 %31(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.12, i64 0, i64 0))
  store i64 %32, i64* @glad_glVertexP4ui, align 8
  %33 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %34 = call i64 %33(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.13, i64 0, i64 0))
  store i64 %34, i64* @glad_glVertexP4uiv, align 8
  %35 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %36 = call i64 %35(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.14, i64 0, i64 0))
  store i64 %36, i64* @glad_glTexCoordP1ui, align 8
  %37 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %38 = call i64 %37(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.15, i64 0, i64 0))
  store i64 %38, i64* @glad_glTexCoordP1uiv, align 8
  %39 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %40 = call i64 %39(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.16, i64 0, i64 0))
  store i64 %40, i64* @glad_glTexCoordP2ui, align 8
  %41 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %42 = call i64 %41(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.17, i64 0, i64 0))
  store i64 %42, i64* @glad_glTexCoordP2uiv, align 8
  %43 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %44 = call i64 %43(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.18, i64 0, i64 0))
  store i64 %44, i64* @glad_glTexCoordP3ui, align 8
  %45 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %46 = call i64 %45(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.19, i64 0, i64 0))
  store i64 %46, i64* @glad_glTexCoordP3uiv, align 8
  %47 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %48 = call i64 %47(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.20, i64 0, i64 0))
  store i64 %48, i64* @glad_glTexCoordP4ui, align 8
  %49 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %50 = call i64 %49(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.21, i64 0, i64 0))
  store i64 %50, i64* @glad_glTexCoordP4uiv, align 8
  %51 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %52 = call i64 %51(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.22, i64 0, i64 0))
  store i64 %52, i64* @glad_glMultiTexCoordP1ui, align 8
  %53 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %54 = call i64 %53(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.23, i64 0, i64 0))
  store i64 %54, i64* @glad_glMultiTexCoordP1uiv, align 8
  %55 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %56 = call i64 %55(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.24, i64 0, i64 0))
  store i64 %56, i64* @glad_glMultiTexCoordP2ui, align 8
  %57 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %58 = call i64 %57(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.25, i64 0, i64 0))
  store i64 %58, i64* @glad_glMultiTexCoordP2uiv, align 8
  %59 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %60 = call i64 %59(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.26, i64 0, i64 0))
  store i64 %60, i64* @glad_glMultiTexCoordP3ui, align 8
  %61 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %62 = call i64 %61(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.27, i64 0, i64 0))
  store i64 %62, i64* @glad_glMultiTexCoordP3uiv, align 8
  %63 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %64 = call i64 %63(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.28, i64 0, i64 0))
  store i64 %64, i64* @glad_glMultiTexCoordP4ui, align 8
  %65 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %66 = call i64 %65(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.29, i64 0, i64 0))
  store i64 %66, i64* @glad_glMultiTexCoordP4uiv, align 8
  %67 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %68 = call i64 %67(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.30, i64 0, i64 0))
  store i64 %68, i64* @glad_glNormalP3ui, align 8
  %69 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %70 = call i64 %69(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.31, i64 0, i64 0))
  store i64 %70, i64* @glad_glNormalP3uiv, align 8
  %71 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %72 = call i64 %71(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.32, i64 0, i64 0))
  store i64 %72, i64* @glad_glColorP3ui, align 8
  %73 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %74 = call i64 %73(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.33, i64 0, i64 0))
  store i64 %74, i64* @glad_glColorP3uiv, align 8
  %75 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %76 = call i64 %75(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.34, i64 0, i64 0))
  store i64 %76, i64* @glad_glColorP4ui, align 8
  %77 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %78 = call i64 %77(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.35, i64 0, i64 0))
  store i64 %78, i64* @glad_glColorP4uiv, align 8
  %79 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %80 = call i64 %79(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.36, i64 0, i64 0))
  store i64 %80, i64* @glad_glSecondaryColorP3ui, align 8
  %81 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %82 = call i64 %81(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.37, i64 0, i64 0))
  store i64 %82, i64* @glad_glSecondaryColorP3uiv, align 8
  br label %83

83:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
